--- a/build.xml
+++ b/build.xml
@@ -48,5 +48,11 @@
 				<attribute name="Class-Path" value="${jar.classpath}"/>
 	        </manifest>
         </jar>
+		
+		<copy todir="${dependency-lib.dir}/garden/${jar-name}/jars">
+			<fileset dir="${dist.dir}">
+				<include name="${jar-name}-${jar-version}.jar" />
+			</fileset>
+		</copy>
 	</target>
 </project>
